Add social links and last updated

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,13 @@
 <nav>
   <a href="{{ "/" | relative_url }}">Home</a>
   <a href="{{ "/writeups/" | relative_url }}">Honest Write-ups</a>
+  <div class="social-icons">
+    <a href="https://github.com/tiagomanunes" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
+    <a href="https://linkedin.com/in/tiagonunes" target="_blank">
+      <i class="fab fa-linkedin"></i>
+    </a>
+  </div>
 </nav>
 
