--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ code {
   display: inline-flex;  
   align-items: center;  
   margin-top: -15px;
+  margin-right: -15px;
   margin-bottom: -15px;
   margin-left: -15px;
 }
