--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,6 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   margin-right: 15px;
-  text-decoration: none;
 }
 
 nav a:hover {
@@ -43,6 +42,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700; /* Bold */
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+a {
+  color: #00aaff;
+  text-decoration: none;
 }
 
 ul {
