--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,8 +8,8 @@
     <a href="https://linkedin.com/in/tiagonunes" target="_blank">
       <i class="fab fa-linkedin"></i>
     </a>
-    <a href="https://app.hackthebox.com/profile/2103519" target="_blank" class="custom-icon">
-      <img src="{{ '/assets/icons/htb.svg' | relative_url }}" alt="HTB" class="icon-img">
+    <a href="https://app.hackthebox.com/profile/2103519" target="_blank" class="htb">
+      <i class="fab fa-cube"></i>
     </a>
   </div>
 </nav>
