--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
       <i class="fab fa-linkedin"></i>
     </a>
     <a href="https://app.hackthebox.com/profile/2103519" target="_blank" class="htb">
-      <i class="fab fa-cube"></i>
+      <i class="fas fa-cube"></i>
     </a>
   </div>
 </nav>
