--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,17 +122,13 @@ hr {
 
 .post-nav a {
   flex: 1;
-  text-align: center;
-  padding: 10px;
-  background-color: #00aaff;
-  color: #ffffff;
+  color: #00aaff;
   text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 .post-nav a:hover {
-  background-color: #0088cc;
+  color: #0088cc;
 }
 
 .prev {
