--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,17 @@ a {
   color: var(--primary-color);
   text-decoration: none;
   transition: color 0.3s ease-in-out;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
 }
 
 a:hover {
   color: var(--hover-color);
   text-shadow: 0px 0px 2px var(--primary-color);
+}
+
+a:active {
+  text-shadow: 0px 0px 12px var(--hover-color);
 }
 
 .navbar {
@@ -73,7 +79,7 @@ a:hover {
 
 .social-icons {
   display: flex;
-  gap: 15px;
+  gap: 20px;
   margin-left: auto;
 }
 
@@ -100,6 +106,23 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+.post-meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 1em;
+}
+
+.machine-link {
+  font-style: italic;
+}
+
+.machine-link.htb a:hover {
+  color: var(--htb-color);
+  text-shadow: 0px 0px 6px var(--htb-color);
 }
 
 pre {
@@ -227,7 +250,16 @@ hr {
 
   .social-icons {
     padding-top: 5px;
-    gap: 10px;
+    gap: 20px;
+  }
+
+  .post-meta {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .machine-link {
+    margin-top: 0.25em;
   }
 
   .post-nav {
