--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Orbitron', sans-serif;
   color: var(--primary-color);
   font-weight: 700;
+  text-align: left;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
