--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
   --hover-color: #66ddff;      /* Slightly brighter blue */
   --text-color: #c3d1e3;       /* Soft off-white */
   --htb-color: #9fef00;        /* HTB green */
+  --rss-color: #f26522;        /* RSS orange */
 }
 
 body {
@@ -105,6 +106,26 @@ a:active {
   color: var(--htb-color);
   text-shadow: 0px 0px 6px var(--htb-color);
 }
+
+.feed {
+  position: relative;
+}
+
+.rss-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.rss-icon a {
+  font-size: 1.4em;
+}
+
+.rss-icon a:hover {
+  color: var(--rss-color);
+  text-shadow: 0px 0px 6px var(--rss-color);
+}
+
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Orbitron', sans-serif;
