--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ "/feed.xml" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/icons/apple-touch-icon.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/icons/favicon-32x32.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/icons/favicon-16x16.png" | relative_url }}">
+  <link rel="icon" type="image/x-icon" href="{{ "/assets/icons/favicon.ico" | relative_url }}">
+  <link rel="manifest" href="{{ "/site.webmanifest" | relative_url }}">
 </head>
 <body>
   {% include nav.html %}
