--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,6 +276,70 @@ hr {
   text-align: right;
 }
 
+.attack-chain {
+  position: relative;
+  margin-top: 3rem;
+  margin-bottom: 3.5rem;
+  margin-left: 1rem;
+  padding-left: 1rem;
+  border-left: 2px solid var(--primary-color);
+}
+
+.attack-step {
+  position: relative;
+  padding-left: 2.5rem;
+  margin-bottom: 2rem;
+}
+
+.attack-step::before {
+  content: "";
+  position: absolute;
+  left: -1rem;
+  top: 0.9rem;
+  width: 1rem;
+  height: 2px;
+  background: var(--primary-color);
+}
+
+.attack-step .marker {
+  position: absolute;
+  left: -0.01rem;
+  top: 0.3rem;
+  width: 16px;
+  height: 16px;
+  border-radius: 30%;
+  border: 2px solid var(--primary-color);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1em;
+  line-height: 1;
+}
+
+.attack-step:hover {
+  color: var(--hover-color);
+  text-shadow: 0px 0px 16px var(--primary-color);
+}
+
+.attack-step:hover .marker {
+  color: var(--text-color);
+  text-shadow: 0px 0px 16px var(--primary-color);
+  box-shadow: 0 0 16px var(--primary-color);
+}
+
+.attack-step h4 {
+  margin: 0;
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.attack-step p {
+  margin: 0.25rem 0 0;
+  font-size: 0.85em;
+  color: var(--text-color);
+}
+
 @media (max-width: 600px) {
   .hamburger {
     display: block;
