Add google site verification tag (still on SEO)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   {% assign meta_desc = page.excerpt | strip_html | strip_newlines | truncate: 160 %}
   <meta name="description" content="{{ meta_desc }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="4Nk00Y6qv4XHcWx4qwlB3awkZzR9zL0nYWVvkulUbV4" />
   <meta property="og:title" content="{{ page.title | escape }}" />
   <meta property="og:description" content="{{ meta_desc }}" />
   <meta property="og:url" content="{{ page.url | absolute_url }}" />
