--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,7 @@
 
   <div class="nav-links">
     <a href="{{ "/" | relative_url }}">Home</a>
+    <a href="{{ "/articles/" | relative_url }}">Articles</a>
     <a href="{{ "/writeups/" | relative_url }}">Honest Write-ups</a>
   </div>
 
