Add Article structured data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,26 @@
   <link rel="icon" type="image/x-icon" href="{{ "/assets/icons/favicon.ico" | relative_url }}">
   <link rel="manifest" href="{{ "/site.webmanifest" | relative_url }}">
   <link rel="canonical" href="{{ page.url | absolute_url }}">
+  {% if page.layout == "post" %}
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Article",
+      "headline": "{{ custom_title | escape }}",
+      "description": "{{ meta_desc }}",
+      "author": {
+        "@type": "Person",
+        "name": "Tiago Nunes"
+      },
+      "datePublished": "{{ page.date | date_to_xmlschema }}",
+      "image": "{{ site.url }}/assets/images/writeup_og_image.png",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "{{ page.url | absolute_url }}"
+      }
+    }
+  </script>
+{% endif %}
 </head>
 <body>
   {% include nav.html %}
