--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,9 @@
         "name": "Tiago Nunes"
       },
       "datePublished": "{{ page.date | date_to_xmlschema }}",
+      {% if page.collection == "writeups" %}
       "image": "{{ site.url }}/assets/images/writeup_og_image.png",
+      {% endif %}
       "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": "{{ page.url | absolute_url }}"
