Minor edits to Dog. Fixed attack steps to render markdown correctly

--- a/_includes/attack-step.html
+++ b/_includes/attack-step.html
@@ -18,6 +18,6 @@
   </div>
   <div class="step-content">
     <h4>{{ include.title }}</h4>
-    <p>{{ include.description }}</p>
+    <p>{{ include.description | markdownify }}</p>
   </div>
 </div>
